syntax = "proto3";

package pb;

// import "user.proto";

option go_package = "github.com/colin-mcl/stocks/pb";

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string firstName = 4;
    string lastName = 5;
}

message CreateUserResponse {
    int32 id = 1;
}