syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/colin-mcl/stocks/pb";

message GetUserRequest {
    string email = 1;
}

message GetUserResponse {
    User user = 1;
}